fix: overflow shield text

--- a/src/components/pull-out-information/pull-out-information.module.scss
+++ b/src/components/pull-out-information/pull-out-information.module.scss
@@ -107,7 +107,7 @@
   }
   @media (width <= 500px) {
     max-width: 170px;
-    max-height: 62px;
+    max-height: 66px;
     p {
       @include text-NotoSans-16-400;
     }
